[gd_scene load_steps=2 format=3 uid="uid://bwdsaqgglbkfj"]

[ext_resource type="Script" path="res://Scripts/GameScripts/scr_mp_controller.gd" id="1_b3kl6"]

[node name="MPControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3kl6")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 79.0
offset_right = 202.0
offset_bottom = 110.0
text = "HOST"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 254.0
offset_top = 79.0
offset_right = 312.0
offset_bottom = 110.0
text = "JOIN"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 161.0
offset_right = 254.0
offset_bottom = 192.0
text = "START"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 41.0
offset_right = 317.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 14.0
offset_right = 251.0
offset_bottom = 37.0
text = "NAME"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartButton" to="." method="_on_start_button_down"]
